--- a/Codes/londonPage.html
+++ b/Codes/londonPage.html
@@ -14,11 +14,15 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 			<img class="place" src="Image/London.jpg"><br>
+			<div class="clearFixContainer">
 			<p>
+			<img class="flags" src="https://e1.pxfuel.com/desktop-wallpaper/272/957/desktop-wallpaper-british-flag-london-flag-thumbnail.jpg" title="London Flag" alt="Flag of London"/>
 			<b>London</b>, the capital of England and the United Kingdom, is a 21st-century city with history stretching back to Roman times. At its centre stand the imposing Houses of Parliament, the iconic ‘Big Ben’ clock tower and Westminster Abbey, site of British monarch coronations. Across the Thames River, the London Eye observation wheel provides panoramic views of the South Bank cultural complex, and the entire city.
 			<br><br>
 			
-			London <strong>worthwhile to visit</strong> for me because they have a clean and sophisticated area, they also have great and famous buildings that is worthwhile to visit. London is also full of character, offering incredible sights and a bustling nightlife, making it a trendy tourist destination. Here are <u>some things that I want to do</u> when I come to London:<br></p>
+			London <strong>worthwhile to visit</strong> for me because they have a clean and sophisticated area, they also have great and famous buildings that is worthwhile to visit. London is also full of character, offering incredible sights and a bustling nightlife, making it a trendy tourist destination. <br>
+			<div class="ToDo" align="left">Here are <u>some things that I want to do</u> when I come to London:</div>
+			<br></p>
 			
 			<div class="con">
 			<figure>
@@ -38,6 +42,7 @@
 				<figcaption>Visit Museums</figcaption>
 			</figure>
 			</div><p>
+			</div>
 			<br>
 			<a href="#main">To top</a>.
 			</p>
