--- a/Codes/singaporePage.html
+++ b/Codes/singaporePage.html
@@ -14,11 +14,14 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 			<img class="place" src="Image/Singapore.jpg"><br>
+			<div class="clearFixContainer">
 			<p>
+			<img class="flags" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_President_of_Singapore.svg/500px-Flag_of_the_President_of_Singapore.svg.png" title="Singapore Flag" alt="Flag of Singapore"/>
 			<b>Singapore,</b> city-state located at the southern tip of the Malay Peninsula, about 85 miles (137 kilometres) north of the Equator. It consists of the diamond-shaped Singapore Island and some 60 small islets; the main island occupies all but about 18 square miles of this combined area. The main island is separated from Peninsular Malaysia to the north by Johor Strait, a narrow channel crossed by a road and rail causeway that is more than half a mile long. The southern limits of the state run through Singapore Strait, where outliers of the Riau-Lingga Archipelago—which forms a part of Indonesia—extend to within 10 miles of the main island.
 			<br><br>
 			
-			Singapore is <strong>one of the places I wanted to visit</strong> as a child because this is the country where my mother worked abroad to save money for our tuition. She also expresses that the area in that country is very clean and they have lesser traffic because of their strict rules to follow. Here are <u>some things that I want to do</u> when I come to Singapore:<br></p>
+			Singapore is <strong>one of the places I wanted to visit</strong> as a child because this is the country where my mother worked abroad to save money for our tuition. She also expresses that the area in that country is very clean and they have lesser traffic because of their strict rules to follow. <br>
+			<div class="ToDo" align="left">Here are <u>some things that I want to do</u> when I come to Singapore:</div><br></p>
 			
 			<div class="con">
 			<figure>
@@ -38,6 +41,7 @@
 				<figcaption>Try their famous cuisines with crabs</figcaption>
 			</figure>
 			</div><p>
+			</div>
 			<br>
 			<a href="#main">To top</a>.
 			</p>
