--- a/Codes/francePage.html
+++ b/Codes/francePage.html
@@ -14,11 +14,14 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 			<img class="place" src="Image/France.jpg"><br>
+			<div class="clearFixContainer">
 			<p>
+			<img class="flags" src="https://cdn.pixabay.com/photo/2016/06/13/18/19/france-1454908__340.jpg" title="France Flag" alt="Flag of France"/>
 			<b>France</b>, in Western Europe, encompasses medieval cities, alpine villages and Mediterranean beaches. Paris, its capital, is famed for its fashion houses, classical art museums including the Louvre and monuments like the Eiffel Tower. The country is also renowned for its wines and sophisticated cuisine. Lascaux’s ancient cave drawings, Lyon’s Roman theater and the vast Palace of Versailles attest to its rich history.
 			<br><br>
 			
-			<strong>I wanted to visit</strong> this place because it is the city of love where couples gather just to have a sight of places that can be seen only in France. They also have cuisines that becamame famous for their country, and the vibe and scenery in their place is also breathtaking and wonderful. Here are <u>some things that I want to do</u> when I come to France:<br></p>
+			<strong>I wanted to visit</strong> this place because it is the city of love where couples gather just to have a sight of places that can be seen only in France. They also have cuisines that becamame famous for their country, and the vibe and scenery in their place is also breathtaking and wonderful. <br>
+			<div class="ToDo" align="left">Here are <u>some things that I want to do</u> when I come to France:</div><br></p>
 			
 			<div class="con">
 			<figure>
@@ -38,6 +41,7 @@
 				<figcaption>Picnic at Eiffel Tower</figcaption>
 			</figure>
 			</div><p>
+			</div>
 			<br>
 			<a href="#main">To top</a>.
 			</p>
