--- a/Codes/CARAMOAN_BucketList_ITAD.html
+++ b/Codes/CARAMOAN_BucketList_ITAD.html
@@ -75,6 +75,7 @@
 				<strong>Give Myself a Treat After a Tiring Day</strong>
 			</p>
 		</div>
+		<h4><a href="#main">Back to Top</a></h4>
 		
 <!-- Contents for ACHIEVEMENT -->
 		<br><br><br><br><br><br><br><br><br><br>
@@ -119,11 +120,6 @@
 		
 		<h4>This is the last page, click <a href="#main">here</a> to go back.</h4>
 		
-		
-		
-			
-			
-	
     </center>
 	
 	</body>
